--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,8 @@ img {
   --accent-color: #2196f3;
   --complementary-color: #ffffff;
   --background-complementary-color: #757575;
+  --cubic-color: cubic-bezier(0.4, 0, 0.2, 1);
+  --main-icon-color: #afb1b8;
 }
 
 .body {
@@ -46,7 +48,7 @@ img {
   padding: 0;
   margin: 0;
 
-  list-style: none;
+  list-style-type: none;
 }
 
 .container {
@@ -60,6 +62,10 @@ img {
 }
 
 /* Logo */
+.main-nav .logo {
+  padding-top: 24px;
+  padding-bottom: 25px;
+}
 
 .logo {
   color: var(--primary-text-color);
@@ -77,8 +83,9 @@ img {
 
 /* Page header */
 .page-header {
-  padding-top: 24px;
-  padding-bottom: 25px;
+  /* padding-top: 24px;
+  padding-bottom: 25px; */
+  border-bottom: 1px solid #ECECEC;
 }
 
 .header-flex {
@@ -111,12 +118,18 @@ img {
   margin-top: auto;
   margin-bottom: auto;
 
+  padding-top: 32px;
+  padding-bottom: 32px;
+
   color: var(--primary-text-color);
 
   font-family: inherit;
   font-weight: 500;
   letter-spacing: 0.02em;
   text-decoration: none;
+
+  position: relative;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-nav .link:hover,
@@ -124,10 +137,21 @@ img {
   color: var(--accent-color);
 }
 
-.site-nav .link.current {
+.link.current {
   color: var(--accent-color);
 }
 
+.site-nav .link.current::after {
+  color: var(--accent-color);
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: var(--accent-color);
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+}
 
 /* Auth nav */
 .auth-nav {
@@ -136,6 +160,8 @@ img {
   padding-left: 0;
   display: flex;
   margin-left: auto;
+  fill: var(--title-text-color);
+  transition: fill 250ms var(--cubic), color 250ms var(--cubic);
 }
 
 .auth-nav .item + .item {
@@ -143,7 +169,11 @@ img {
 }
 
 .auth-nav .item {
-  color: var(--title-text-color);
+  fill: var(--title-text-color);
+  transition-property: color, fill;
+  transition-duration: 250ms;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   /* background-color: turquoise; */
 }
 
@@ -158,11 +188,19 @@ img {
   font-weight: 500;
   letter-spacing: 0.02em;
   text-decoration: none;
+  fill: var(--title-text-color);
+  transition: fill 250ms var(--cubic-color), color 250ms var(--cubic-color);
 }
 
+.auth-nav .mailto {
+  transition: fill 250ms var(--cubic-color);
+}
+
+
 .mailto {
-  fill: var(--title-text-color);
+  fill: currentColor;
   margin-right: 10px; 
+
 }
 
 .auth-nav .link:hover,
@@ -262,6 +300,7 @@ margin-right: 69px;
   width: 44px;
   border-radius: 80%;
   margin-right: 10px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-socials .link {
@@ -521,7 +560,8 @@ background-size: cover;
   background-color: var(--background-complementary-color);
 }
 
-.future-list .link:hover {
+.future-list .link:hover,
+.future-list .link:focus {
   color: var(--complementary-color);
   background-color: var(--accent-color.);
 }
@@ -551,24 +591,38 @@ background-size: cover;
 /* временный цвет */
 .profile {
   display: flex;
+  padding-left: 0px;
 }
 
-.profile .items + .items {
+.profile .product-items + .product-items {
     margin-left: 30px;
 }
 
-.profile .items {
-  background-color: var(--background-complementary-color);
+.profile .product-items {
+  position: relative;
+  display: block;
 }
 
+.img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+  }
+
 .profile .subtitle {
+  position: absolute;
+  left: 0;
+  bottom: 0;
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 0; 
+  width: 100%;
+  margin: 0;
   padding-top: 27px;
-  padding-bottom: 27px; 
+  padding-bottom: 27px;
 
   color: var(--complementary-color);
-  
+  background: rgba(47, 48, 58, 0.8); 
+
   font-size: 14px;
   line-height: 1.14;
   font-weight: 700;
@@ -643,13 +697,14 @@ background-size: cover;
 
 .team-icon {
   margin-right: 10px;
+  cursor: pointer;
 }
 
 .team-icon:last-child {
   margin-right: 0;
 }
 
-.items .link-socials {
+.link-socials {
   margin-right: 0;
   display: flex;
   width: 44px;
@@ -657,24 +712,28 @@ background-size: cover;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
+  fill: var(--main-icon-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-socials:hover,
 .link-socials:focus {
   background-color: var(--accent-color);
-}
-
-.items-social:hover {
   fill: var(--complementary-color);
 }
 
+.items-social:hover,
+.items-social:focus {
+  color: var(--complementary-color);
+}
+
 .items-social{
-  fill: #AFB1B8;
   width: 20px;
   height: 20px;
   display: inline-block;
   align-items: center;
-}
+} 
 
 .customers {
   margin-top: 0px;
@@ -685,19 +744,23 @@ background-size: cover;
   justify-content: space-evenly;
 }
 
-.logo-icon {
+.icon {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 170px;
   height: 90px;
-  border: 1px solid #afb1b8;
   border-radius: 4px;
+  cursor: pointer;
+  fill: var(--main-icon-color);
+  border: 1px solid var(--main-icon-color);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.company-logo {
-  fill: #AFB1B8;;
-}
+/* .company-logo {
+  fill: #AFB1B8;
+} */
 
 .customers .icon {
   margin-left: 30px;
@@ -707,13 +770,16 @@ background-size: cover;
   margin-left: 0;
 }
 
-.logo-icon:hover {
-  border-color: var(--accent-color);
-}
-
-.company-logo:hover {
+.icon:hover,
+.icon:focus {
+  border: 1px solid var(--accent-color);
   fill: var(--accent-color);
 }
+
+/* .company-logo:hover,
+.company-logo:focus {
+  fill: var(--accent-color);
+}  */
 
 /* Стили для portfolio.html */
 
@@ -767,6 +833,7 @@ padding-bottom: 114px;
 }
 
 .web-list {
+  cursor: pointer;
   margin: 0px;
   padding: 0px;
   display: flex;
@@ -775,11 +842,54 @@ padding-bottom: 114px;
   list-style-type: none;
 }
 
-.web-list .link {
-  background: url(portfolio-1.jpg);
-  border-radius: 5px 5px 0px 0px;
+.web-list .servises {
+  /* background: url(portfolio-1.jpg);
+  border-radius: 5px 5px 0px 0px; */
 
-  text-decoration: none
+  text-decoration: none;
+}
+
+.block {
+  position: relative;
+  overflow: hidden;
+  width: calc((100% - 60px) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+  border: 1px solid #EEEEEE;
+  border-radius: 5px;
+  border-bottom: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;+
+}
+
+ .block:hover {
+  box-sizing: border-box;
+  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 
+  0px 4px 4px rgba(0, 0, 0, 0.06), 
+  0px 1px 1px rgba(0, 0, 0, 0.12);
+ }
+
+ .desc {
+  display:  flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 63px 24px;
+  pointer-events: none;
+  font-size: 18px;
+  line-height: 1.56;
+  color: var(--complementary-color);
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ } 
+
+.block:hover .desc,
+.block:focus .desc {
+  transform: translateY(0);
 }
 
 .web-list .title {
@@ -794,30 +904,51 @@ padding-bottom: 114px;
   letter-spacing: 0.06em;
 }
 
-
-.block {
-  width: calc((100% - 60px) / 3);
-  margin-right: 30px;
-  margin-bottom: 30px;
-  /* border-bottom: 1px solid #eeeeee;
-  border-right: 1px solid #eeeeee;
-  border-left: 1px solid #eeeeee;
-  border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 5px; */
-
+.block-content {
+  position: relative;
   overflow: hidden;
-  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
+  background-color: #ffffff;;
+}
+
+.block:nth-child(3n) {
+  margin-right: 0;
+}
+
+ /* .web-list .desc {
+  padding: 0;
+  margin: 0;
+  
+  display: none;
+  /* font-size: 18px;
+  line-height: 1.55; */
+  /* letter-spacing: 0.03em; */
+/* }  */ 
+
+.web-list .block:nth-last-child(-n+3) {
+    margin-bottom: 0;
+}
+
+.block-content{
+  padding-top: 20px;
+  padding-right: 24px;
+  padding-left: 24px;
+  padding-bottom: 20px;
+  /* border-left: 1px solid #eeeeee; 
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;  */
+}
+
+.block-content .title {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03px;
+  color: #212121;
 }
 
 .block .text {
-  margin: 0;
-  color: var(--title-text-color);
-  
-  font-size: 16px;
-  line-height: 1.87;
-}
-
-.web-list .text {
   display: flex;
   margin: 0;
   text-align: center;
@@ -828,46 +959,6 @@ padding-bottom: 114px;
   line-height: 1.88;
   letter-spacing: 0.03em;
 }
-
-.block:nth-child(3n) {
-  margin-right: 0;
-}
-/* Временный цвет */
-.block .desc {
-  margin: 0px;
-  padding: 0px;
-  color: var(--primary-text-color);
-  
-  font-size: 18px;
-  line-height: 1.55;
-}
-
-.web-list .desc {
-  padding: 0;
-  margin: 0;
-  
-  display: none;
-  font-size: 18px;
-  line-height: 1.55;
-  letter-spacing: 0.03em;
-}
-
-.web-list .block:nth-last-child(-n+3) {
-    margin-bottom: 0;
-}
-
-.block-content {
-  padding-top: 20px;
-  padding-right: 24px;
-  padding-left: 24px;
-  padding-bottom: 20px;
-
-  border-left: 1px solid #eeeeee; 
-  border-right: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee; 
-}
-
-
 
 
 
