--- a/css/styles.css
+++ b/css/styles.css
@@ -814,8 +814,25 @@ padding-bottom: 114px;
 .button-nav > .nav:not(:last-child) {
   margin-left: 0;
   margin-right: 8px;
-
+  cursor: pointer;
  }
+
+ .nav {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  padding: 6px 21px;
+  border-radius: 4px;
+  border-style: none;
+  background-color: #f5f4fa;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+ 
 .container .button-nav {
   text-align: center;
  }
@@ -939,6 +956,7 @@ padding-bottom: 114px;
 }
 
 .block-content .title {
+  margin-bottom: 4px;
   font-family: Roboto;
   font-style: normal;
   font-weight: bold;
